# ninjar-lite-app

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  arm_default.ld  build.sh  lv_conf.h  lv_drv_conf.h  main.c
cmake/: arm926ejs-musl-toolchain.cmake  simulator.cmake  target.cmake
include/linux/: init.h
port/: lv_port_disp.h  lv_port_disp_fbdev.c  lv_port_indev.c  lv_port_indev.h  lv_port_sdl.c  lv_port_tick.h  lv_port_tick_linux.c
src/: init.c
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp_hook.c
ui/fonts/: ui_font_Fixedasys14.c  ui_font_Fixedasys16.c
ui/screens/: ui_ScreenHome.c
